== 2.6.14 ==
Release date: May 11, 2022
* Enhancement: Advanced Accordion - Added Custom CSS ID option
* Enhancement: Advanced Accordion - Rearranged the repeater content inside tabs
* Enhancement: Flip Box - Added content background and padding options
* Fixed: Animated Gradient Background - Background overlay was overriding the gradient effect in editor

== 2.6.13 ==
Release date: April 15, 2022
* Fixed: Image Comparison - JS error preventing the widget from working

== 2.6.12 ==
Release date: April 13, 2022
* Enhancement: Team Member - Added: Margin option for image
* Enhancement: Advanced Accordion - Added border radius option for title
* Enhancement: Twitter Tweet - Added support for URL dynamic tags
* Fixed: Posts - Align Arrows option was not working
* Fixed: Info Box - Minor CSS glitch
* Fixed: Display Conditions - Current Date option was not working for single day
* Enhancement: Image Comparison - Added classes to before and after images
* Enhancement: Image Comparison - Added Image Size option

== 2.6.11 ==
Release date: March 23, 2022
* Hotfix: Compatibility issues with Elementor 3.6.0
* Set the minimum required Elementor version to 3.2.0
* Enhancement: Twitter Tweet - Added dynamic tags support to Tweet URL field
* Enhancement: Info Box Carousel - Added grid layout option
* Enhancement: Info Box Carousel - Renamed widget to Info Grid & Carousel
* Fixed: Dual Heading - Issue with long text
* Fixed: Instagram Feed - Cache Timeout option
* Fixed: Icon List - Icon Type text field is not showing
* Fixed: Advanced Posts - Global typography settings for links was overriding post meta typography when post meta link is enabled

== 2.6.10 ==
Release date: March 3, 2022
* Enhancement: Team Member, Team Member Carousel - Added button style option for social links
* Enhancement: Team Member Carousel - Add links for Flickr, Tumblr, Github and Vimeo
* Enhancement: Flip Box - Added dynamic tags support for title, description and icon image options